# VariTensor

./: CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  README.md  varitensor.h
include/varitensor/: Tensor.h  pre_defined.h  pretty_print.h
include/varitensor/impl/: ExpressionIteratorBase.h  Index.h  LinkedOp_decl.h  LinkedOp_impl.h  SummedOp_decl.h  SummedOp_impl.h  View_decl.h  View_impl.h  bulk.h  common.h  deny.h  increment_positions.h  pre_defined.h  visitors.h
src/: Tensor.cxx  pretty_print.cxx
src/impl/: ExpressionIteratorBase.cxx  LinkedOp.cxx  Preparatory.cxx  ProductOp.cxx  View.cxx  bulk.cxx  pre_defined.cxx
test/: TestAdvanced.h  TestAssignmentOperations.h  TestBulk.h  TestComparison.h  TestConstruction.h  TestIndexManipulation.h  TestIndexing.h  TestInformation.h  TestLinearOperators.h  TestManipulation.h  TestScalar.h  TestSet.h  TestTensorAddition.h  TestTensorMultiplication.h  run_tests.cxx
